WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlanCharge__c/fields/L1DiscountPercentLimit__c.field-meta.xml
<CustomField>
    <fullName>L1DiscountPercentLimit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>L1 Discount Percent Limit (TEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>