WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlanCharge__c/fields/MinimumTerm__c.field-meta.xml
<CustomField>
    <fullName>MinimumTerm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Minimum Term (TEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>