WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlanCharge__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSRP (TEXT)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>