WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlanCharge__c/fields/ShippingWeight__c.field-meta.xml
<CustomField>
    <fullName>ShippingWeight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Weight (TEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>