WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlanCharge__c/fields/VendorPrice__c.field-meta.xml
<CustomField>
    <fullName>VendorPrice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Price (TEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>