WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlanCharge__c/fields/WEXCost__c.field-meta.xml
<CustomField>
    <fullName>WEXCost__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>