WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlanCharge__c/fields/WEXMinPrice__c.field-meta.xml
<CustomField>
    <fullName>WEXMinPrice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Min Price (TEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>